dataset1235/2025-2/2868285114/users/2357405339/executions/3071719669_2086141900.log
== SUBMISSION (2025-08-28 22:44:03)
-- CODE: 
lado = float(input())
apotema + lado /(2*math.tan(math.tanpi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:16)
-- CODE: 
from math import *
lado = int(input())

apotema = lado/(2*tan(pi/11))
area = 11 * lado * apotema
print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
468.28
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
299.7
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
674.33
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
74.93
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
917.83
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
168.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:52:20)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:38:24)
-- CODE: 
from math import *
lado = int(input())

apotema = lado/(2*tan(pi/11))
area = 6 * lado * apotema
print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
255.43
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
163.47
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
367.81
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
40.87
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
500.64
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
91.95
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:51)
-- CODE: 
from math import *
lado = int(input())

apotema = lado/(2*tan(pi/11))
area = * lado * apotema
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 5
    area = * lado * apotema
           ^^^^^^^^^^^^^^^^
SyntaxError: can't use starred expression here
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:57)
-- CODE: 
from math import *


lado = int(input())
apot = lado/ (2 * math.tan(math.pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:54:46)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * math.tan(math.pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:18)
-- CODE: 
lado = float(input())
apotema = lado /(2*math.tan(math.tanpi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:23)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:50:54)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 9/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:51)
-- CODE: 
lado = float(input())
apotema + lado /(2*tan(pi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:55:18)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * math.tan(math.pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:29)
-- CODE: 
lado = float(input())
apotema = lado /(2*math.tan(math.tanpi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:50:47)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 9/2 * lado * apot
print (round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:55)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:48)
-- CODE: 
lado = float(input())
apotema + lado /(2*tan(pi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema + lado /(2*tan(pi/11)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:06)
-- CODE: 
lado = float(input())
apotema + lado / (2*tan(pi/11))
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado / (2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:42)
-- CODE: 
from math import *


lado = input(int())
apot = lado/ (2 * math.tan(math.pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:50:52)
-- CODE: 
from math import *


lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 9/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:31)
-- CODE: 
from math import *
lado = input(input())
apot = lado/ (2 * tan(pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lado = input(input())
           ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:38:12)
-- CODE: 
from math import *
lado = int(input())

apotema = lado/(2*tan(pi/11))
area = 6 lado * apotema
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 5
    area = 6 lado * apotema
             ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:18)
-- CODE: 
from math import *
lado = int(input())

apotema = lado/(2*tan(pi/11))
area = 11 * lado * apotema
print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
468.28
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
299.7
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
674.33
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
74.93
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
917.83
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
168.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:54)
-- CODE: 
from math import *


lado = int(input())
apot = lado/ (2 * math.tan(math.pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = lado/ (2 * math.tan(math.pi/11))
                      ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:37)
-- CODE: 
lado = float(input())
apotema + lado/(2*tan(pi/11))
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema + lado/(2*tan(pi/11))
    ^^^^^^^
NameError: name 'apotema' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:58:33)
-- CODE: 
from math import *


lado = int(input())
apot = lado/ (2 * tan(pi/11))
area = 11/2 * lado * apot
print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:46:17)
-- CODE: 
lado = float(input())
apotema = lado /(2*math.tan(math.tanpi/11)
area = (11*lado*apotema)/2
print(round(area,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema = lado /(2*math.tan(math.tanpi/11)
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
